Mood-Swing-Emoji

--- a/kaka.html
+++ b/kaka.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Background Color </title>
+    <title>Random-Emoji</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>chnage Background color</h1>
-        <button id="btn">Click me see magic </button>
-        <p id="result">#ffffff</p>
-    </div>
+    <div id="emoji">🙂</div>
+    <select id="moodselector">
+        <option value="happy">Happy</option>
+        <option value="angry">Angry</option>
+        <option value="sad">Sad</option>
+        <option value="excited">Excited</option>
+        <option value="calm">Calm</option>
+    </select>
     <script src="script.js"></script>
+
 </body>
 </html>
